[package]
name = "piko-cli"
version = "0.1.0"
authors = ["Lyuben Todorov <lyuben.todorov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6.3.0"
linefeed = "0.6.0"
rand = "0.7.3"

[dependencies.piko]
path = "../node"