[package]
name = "piko-cli"
version = "0.1.0"
authors = ["Lyuben Todorov <lyuben.todorov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6.3.0"
linefeed = "0.6.0"
rand = "0.7.3"
serde = "1.0.116"
serde_cbor = "0.11.1"
byteorder = "1.3.4"
clap = "3.0.0-beta.2"
pnet = "0.26.0"

[dependencies.piko]
path = "../node"